--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index2.css">
+    
 
 </head>
 <body>
     <h1>This is demo learning how to use git and github</h1>
     <button>Finish</button>
     <h2>test push</h2>
+    <h1>This is add</h1>
+    <button>add</button>
 </body>
 </html>
