--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h1>This is demo learning how to use git and github</h1>
     <button>Finish</button>
     <h2>test push</h2>
+    <h1>This is new add</h1>
+    <button>add new</button>
 </body>
 </html>
